--- a/kadai_014/kadai_014.html
+++ b/kadai_014/kadai_014.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>MY<span class="skyblue">P</span>ROFILE</h1>
+    <h1><span class="skyblue">M</span>Y<span class="pink">P</span>ROFILE</h1>
     <div id="basic">
         <h2 class="pink">名前</h2>
         <p><strong>侍　太郎</strong></p>
